--- a/index.html
+++ b/index.html
@@ -24,18 +24,27 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
     <title>Basic multiplayer online game</title>
 </head>
 <body>
-	<!-- Display game -->
+<form>
+    <input type="text" id="playername" name="playername">
+    <input type="submit" onclick="movePlayer();">
+</form>
+    <p id="playername"></p>
+    <p id="points"></p>
+
+    <!-- Display game -->
     <div id='game'></div>
-	  <div id='chatbox'>
+   
+    <div id='chatbox'>
     <ul id="messages"></ul>
             </div>
-
+                    
     <form action="">
 	<input id="m" autocomplete="off" /><button>Send</button>
     
 </form>
        <div id='menu'>Wallet - Profile - Chatbox</div>
-   
+
+       <div id="points"></div>   
 <!-- Connection to javascript -->
 <script src="js/game.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
@@ -43,6 +52,9 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 
 <script src="/socket.io/socket.io.js"></script> 
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script> 
+<!-- My test-->
+
+
 <script>
 $(function () {
 	var socket = io();
